test/errors/delete_used_variable.li.correct
42
error: delete_used_variable.li:5:9: 'x' is not defined
│ println(x);
│         ~
│         ^
